--- a/.gitignore
+++ b/.gitignore
@@ -42,5 +42,8 @@ testem.log
 Thumbs.db
 /src/environments/
  
-
+.firebaserc            
+firebase.json            
+firebase-debug.log       
+firebase-export.json   
  
